[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "slapping", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.1"
flake8 = "^3.9.2"
pytest-cov = "^6.2.1"

[project]
name = "slapping"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests (==2.26.0)"
]

[tool.pytest.ini_options]
addopts = "--cov=slapping"
testpaths = [
    "tests"
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
